Refactor code ---  * Refactor migration cli to only use sql files  * Update swagger documentation  * Update php documentation  *
